modification to new batch format

--- a/Extra/Data/create_triplets.ipynb
+++ b/Extra/Data/create_triplets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "40a51d8f-38fc-45a5-aec7-0d9d55d7772e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "fc5930ef-0c7d-4489-b763-76b698aaf773",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,7 @@
     "    #print(df_unlabeled.head())\n",
     "    \n",
     "    ## Create skeleton for the batch-file\n",
+    "    global df_batch\n",
     "    df_batch = pd.DataFrame()\n",
     "    df_temp_anchor = pd.DataFrame()\n",
     "    df_temp_unlabeled_big = pd.DataFrame()\n",
@@ -50,25 +51,22 @@
     "    ## While also adding the url:\n",
     "    # \n",
     "\n",
-    "    X = 500\n",
-    "    #Find X random anchor pictures\n",
+    "    #We need random anchor pictures for all 1000 rows\n",
     "    #Now Anchor list is 200 and we want it to be 1000\n",
-    "    df_anchor = pd.concat([df_anchor]*5)\n",
-    "    df_temp_anchor[[\"image1_title\", \"image1_label\"]] = df_anchor[[\"image_id\", \"cancer\"]].sample(frac=1)\n",
+    "    df_anchor = pd.concat([df_anchor]*3)\n",
+    "    df_temp_anchor[[\"image1_title\", \"image1_label\"]] = df_anchor[[\"image_id\", \"cancer\"]].sample(500)\n",
     "    print(\"temp_anchor shuffled!\")\n",
     "    df_temp_anchor[[\"image1_url\"]] = \"https://github.com/vcheplygina/crowdsim/blob/main/Extra/Data/batch/\" + df_temp_anchor[[\"image1_title\"]].values + \"_resized.jpg?raw=true\"\n",
     "\n",
-    "    #Find X random and different pictures (now we can hope each unlabeled picture is listed 4 times)\n",
-    "    #Now unlabeled has 500 pictures, we want it to be 2000\n",
-    "    df_unlabeled = pd.concat([df_unlabeled]*4)\n",
+    "    #Now unlabeled has 500 cancer and 500 non-cancer images, we want to shuffle\n",
     "    df_temp_unlabeled_big = df_unlabeled[[\"image_id\", \"cancer\"]].sample(frac=1)\n",
     "    print(\"temp_unlabeled shuffled!\")\n",
     "\n",
-    "    # Split into 2 groups of X\n",
-    "    df_temp_unlabeled_A[[\"image2_title\", \"image2_label\"]] = df_temp_unlabeled_big[0:X*2]\n",
+    "    # Split into 2 groups of 500\n",
+    "    df_temp_unlabeled_A[[\"image2_title\", \"image2_label\"]] = df_temp_unlabeled_big[0:500]\n",
     "    df_temp_unlabeled_A[[\"image2_url\"]] = \"https://github.com/vcheplygina/crowdsim/blob/main/Extra/Data/batch/\" + df_temp_unlabeled_A[[\"image2_title\"]].values + \"_resized.jpg?raw=true\"\n",
     "\n",
-    "    df_temp_unlabeled_B[[\"image3_title\", \"image3_label\"]] = df_temp_unlabeled_big[X*2:X*4]\n",
+    "    df_temp_unlabeled_B[[\"image3_title\", \"image3_label\"]] = df_temp_unlabeled_big[500:1000]\n",
     "    df_temp_unlabeled_B[[\"image3_url\"]] = \"https://github.com/vcheplygina/crowdsim/blob/main/Extra/Data/batch/\" + df_temp_unlabeled_B[[\"image3_title\"]].values + \"_resized.jpg?raw=true\"\n",
     "\n",
     "    #\n",
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "id": "18fd4791-ba9b-4fc4-84fb-3a078e7a0505",
    "metadata": {},
    "outputs": [
@@ -99,39 +97,39 @@
       "temp_anchor shuffled!\n",
       "temp_unlabeled shuffled!\n",
       "     image1_title  image1_label  \\\n",
-      "995  ISIC_0004168           0.0   \n",
-      "996  ISIC_0013500           1.0   \n",
-      "997  ISIC_0000003           0.0   \n",
-      "998  ISIC_0013832           1.0   \n",
-      "999  ISIC_0009882           1.0   \n",
+      "495  ISIC_0014603           0.0   \n",
+      "496  ISIC_0009993           1.0   \n",
+      "497  ISIC_0013578           1.0   \n",
+      "498  ISIC_0012735           0.0   \n",
+      "499  ISIC_0000463           1.0   \n",
       "\n",
       "                                            image1_url  image2_title  \\\n",
-      "995  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_8229307   \n",
-      "996  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_2273490   \n",
-      "997  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_6687278   \n",
-      "998  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_7991932   \n",
-      "999  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_7236143   \n",
+      "495  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_5216586   \n",
+      "496  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_7186503   \n",
+      "497  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_1648826   \n",
+      "498  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_5829938   \n",
+      "499  https://github.com/vcheplygina/crowdsim/blob/m...  ISIC_6671773   \n",
       "\n",
       "     image2_label                                         image2_url  \\\n",
-      "995             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
-      "996             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
-      "997             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
-      "998             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
-      "999             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "495             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "496             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "497             0  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "498             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
+      "499             1  https://github.com/vcheplygina/crowdsim/blob/m...   \n",
       "\n",
       "     image3_title  image3_label  \\\n",
-      "995  ISIC_7392410             0   \n",
-      "996  ISIC_8303710             0   \n",
-      "997  ISIC_7378122             0   \n",
-      "998  ISIC_4809078             0   \n",
-      "999  ISIC_8249766             0   \n",
+      "495  ISIC_8667793             0   \n",
+      "496  ISIC_4653503             1   \n",
+      "497  ISIC_7800750             1   \n",
+      "498  ISIC_5021861             1   \n",
+      "499  ISIC_6255113             1   \n",
       "\n",
       "                                            image3_url  \n",
-      "995  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
-      "996  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
-      "997  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
-      "998  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
-      "999  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "495  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "496  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "497  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "498  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
+      "499  https://github.com/vcheplygina/crowdsim/blob/m...  \n",
       "batch created succesfully!\n"
      ]
     }
@@ -160,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "id": "fa08cc86-766e-4825-a153-c000616a0413",
    "metadata": {},
    "outputs": [],
@@ -179,8 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d8107441-2ee9-440d-b97a-90474a97092e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Split batch into 10 smaller batches\n",
+    "\n",
+    "df_big_batch = pd.read_csv(\"batch_for_crowdsim.csv\")\n",
+    "for i in range(10):\n",
+    "    df_small_batch = df_big_batch[i*50:(i+1)*50]\n",
+    "    df_small_batch.to_csv(\"batch_a_0\"+str(i+1)+\".csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85c51c4b-2cad-4a8a-ad1d-7d5a145e98c2",
    "metadata": {},
    "outputs": [],
    "source": []
