--- a/Extra/Data/create_unlabeled.ipynb
+++ b/Extra/Data/create_unlabeled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "08dea675-6a82-4974-8c50-e0a6cf9b0a9f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "dc665159-3d5f-4162-8568-14b09310846e",
    "metadata": {
     "tags": []
@@ -48,6 +48,8 @@
        "      <th>diagnosis</th>\n",
        "      <th>benign_malignant</th>\n",
        "      <th>target</th>\n",
+       "      <th>melanoma</th>\n",
+       "      <th>seborrheic_keratosis</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -61,6 +63,8 @@
        "      <td>unknown</td>\n",
        "      <td>benign</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -71,6 +75,8 @@
        "      <td>upper extremity</td>\n",
        "      <td>unknown</td>\n",
        "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -83,6 +89,8 @@
        "      <td>nevus</td>\n",
        "      <td>benign</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -93,6 +101,8 @@
        "      <td>head/neck</td>\n",
        "      <td>unknown</td>\n",
        "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -105,9 +115,13 @@
        "      <td>unknown</td>\n",
        "      <td>benign</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -127,6 +141,8 @@
        "      <td>unknown</td>\n",
        "      <td>benign</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33122</th>\n",
@@ -137,6 +153,8 @@
        "      <td>torso</td>\n",
        "      <td>unknown</td>\n",
        "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -149,6 +167,8 @@
        "      <td>unknown</td>\n",
        "      <td>benign</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33124</th>\n",
@@ -159,6 +179,8 @@
        "      <td>lower extremity</td>\n",
        "      <td>unknown</td>\n",
        "      <td>benign</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -171,10 +193,12 @@
        "      <td>nevus</td>\n",
        "      <td>benign</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>33126 rows × 8 columns</p>\n",
+       "<p>33126 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -191,23 +215,36 @@
        "33124  ISIC_9999666  IP_7702038    male        50.0   \n",
        "33125  ISIC_9999806  IP_0046310    male        45.0   \n",
        "\n",
-       "      anatom_site_general_challenge diagnosis benign_malignant  target  \n",
-       "0                         head/neck   unknown           benign       0  \n",
-       "1                   upper extremity   unknown           benign       0  \n",
-       "2                   lower extremity     nevus           benign       0  \n",
-       "3                         head/neck   unknown           benign       0  \n",
-       "4                   upper extremity   unknown           benign       0  \n",
-       "...                             ...       ...              ...     ...  \n",
-       "33121                         torso   unknown           benign       0  \n",
-       "33122                         torso   unknown           benign       0  \n",
-       "33123               lower extremity   unknown           benign       0  \n",
-       "33124               lower extremity   unknown           benign       0  \n",
-       "33125                         torso     nevus           benign       0  \n",
+       "      anatom_site_general_challenge diagnosis benign_malignant  target  \\\n",
+       "0                         head/neck   unknown           benign       0   \n",
+       "1                   upper extremity   unknown           benign       0   \n",
+       "2                   lower extremity     nevus           benign       0   \n",
+       "3                         head/neck   unknown           benign       0   \n",
+       "4                   upper extremity   unknown           benign       0   \n",
+       "...                             ...       ...              ...     ...   \n",
+       "33121                         torso   unknown           benign       0   \n",
+       "33122                         torso   unknown           benign       0   \n",
+       "33123               lower extremity   unknown           benign       0   \n",
+       "33124               lower extremity   unknown           benign       0   \n",
+       "33125                         torso     nevus           benign       0   \n",
        "\n",
-       "[33126 rows x 8 columns]"
+       "       melanoma  seborrheic_keratosis  \n",
+       "0             0                     0  \n",
+       "1             0                     0  \n",
+       "2             0                     0  \n",
+       "3             0                     0  \n",
+       "4             0                     0  \n",
+       "...         ...                   ...  \n",
+       "33121         0                     0  \n",
+       "33122         0                     0  \n",
+       "33123         0                     0  \n",
+       "33124         0                     0  \n",
+       "33125         0                     0  \n",
+       "\n",
+       "[33126 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "a7c6aec6-067c-40da-92aa-06a2e122cfef",
    "metadata": {},
    "outputs": [],
@@ -230,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4407d9b2-f253-41a6-8de9-63c6cad5a9f0",
    "metadata": {},
    "outputs": [
@@ -261,28 +298,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>19968</th>\n",
-       "      <td>ISIC_6065301</td>\n",
+       "      <th>30409</th>\n",
+       "      <td>ISIC_9186921</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29054</th>\n",
-       "      <td>ISIC_8791321</td>\n",
+       "      <th>27294</th>\n",
+       "      <td>ISIC_8266094</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22031</th>\n",
-       "      <td>ISIC_6671773</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14407</th>\n",
-       "      <td>ISIC_4414841</td>\n",
+       "      <th>4230</th>\n",
+       "      <td>ISIC_1373747</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23034</th>\n",
-       "      <td>ISIC_6997436</td>\n",
+       "      <th>8104</th>\n",
+       "      <td>ISIC_2523171</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23383</th>\n",
+       "      <td>ISIC_7107771</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -291,28 +328,28 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4746</th>\n",
-       "      <td>ISIC_1522266</td>\n",
+       "      <th>11678</th>\n",
+       "      <td>ISIC_3596877</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22088</th>\n",
-       "      <td>ISIC_6688054</td>\n",
+       "      <th>29436</th>\n",
+       "      <td>ISIC_8898680</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16794</th>\n",
-       "      <td>ISIC_5136890</td>\n",
+       "      <th>20139</th>\n",
+       "      <td>ISIC_6122044</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12976</th>\n",
-       "      <td>ISIC_3992996</td>\n",
+       "      <th>7487</th>\n",
+       "      <td>ISIC_2339423</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19579</th>\n",
-       "      <td>ISIC_5944524</td>\n",
+       "      <th>3041</th>\n",
+       "      <td>ISIC_1013796</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -322,22 +359,22 @@
       ],
       "text/plain": [
        "           image_id  cancer\n",
-       "19968  ISIC_6065301       0\n",
-       "29054  ISIC_8791321       0\n",
-       "22031  ISIC_6671773       1\n",
-       "14407  ISIC_4414841       0\n",
-       "23034  ISIC_6997436       0\n",
+       "30409  ISIC_9186921       0\n",
+       "27294  ISIC_8266094       0\n",
+       "4230   ISIC_1373747       0\n",
+       "8104   ISIC_2523171       0\n",
+       "23383  ISIC_7107771       0\n",
        "...             ...     ...\n",
-       "4746   ISIC_1522266       0\n",
-       "22088  ISIC_6688054       0\n",
-       "16794  ISIC_5136890       0\n",
-       "12976  ISIC_3992996       0\n",
-       "19579  ISIC_5944524       0\n",
+       "11678  ISIC_3596877       0\n",
+       "29436  ISIC_8898680       0\n",
+       "20139  ISIC_6122044       0\n",
+       "7487   ISIC_2339423       0\n",
+       "3041   ISIC_1013796       0\n",
        "\n",
        "[33126 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "263cdfb5-133f-475b-b254-91c922964c9e",
    "metadata": {},
    "outputs": [],
@@ -361,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cce90ab9-bd04-46e2-a3de-a6eab6faea3b",
    "metadata": {},
    "outputs": [
@@ -370,40 +407,40 @@
      "output_type": "stream",
      "text": [
       "           image_id  cancer\n",
-      "21557  ISIC_6541615       1\n",
-      "758    ISIC_0333091       1\n",
-      "11644  ISIC_3590167       1\n",
-      "21916  ISIC_6634951       1\n",
-      "20612  ISIC_6269166       1\n",
+      "20904  ISIC_6348638       1\n",
+      "774    ISIC_0337631       1\n",
+      "28175  ISIC_8527092       1\n",
+      "33050  ISIC_9978107       1\n",
+      "28028  ISIC_8483382       1\n",
       "...             ...     ...\n",
-      "32301  ISIC_9754098       1\n",
-      "1288   ISIC_0489267       1\n",
-      "22862  ISIC_6945634       1\n",
-      "9984   ISIC_3097354       1\n",
-      "8972   ISIC_2787702       1\n",
+      "22520  ISIC_6829008       1\n",
+      "475    ISIC_0250839       1\n",
+      "3651   ISIC_1200192       1\n",
+      "26954  ISIC_8167374       1\n",
+      "23854  ISIC_7242384       1\n",
       "\n",
-      "[250 rows x 2 columns]\n",
+      "[500 rows x 2 columns]\n",
       "           image_id  cancer\n",
-      "26342  ISIC_7991932       0\n",
-      "16653  ISIC_5096556       0\n",
-      "1990   ISIC_0694033       0\n",
-      "10714  ISIC_3304982       0\n",
-      "13153  ISIC_4044272       0\n",
+      "32584  ISIC_9837063       0\n",
+      "21230  ISIC_6442768       0\n",
+      "11783  ISIC_3628451       0\n",
+      "16616  ISIC_5084654       0\n",
+      "11091  ISIC_3419245       0\n",
       "...             ...     ...\n",
-      "8582   ISIC_2676009       0\n",
-      "7695   ISIC_2400548       0\n",
-      "7259   ISIC_2273490       0\n",
-      "12739  ISIC_3923443       0\n",
-      "11839  ISIC_3645705       0\n",
+      "18533  ISIC_5630228       0\n",
+      "4451   ISIC_1441260       0\n",
+      "21714  ISIC_6577841       0\n",
+      "3283   ISIC_1091280       0\n",
+      "5635   ISIC_1787026       0\n",
       "\n",
-      "[250 rows x 2 columns]\n"
+      "[500 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
     "## Pick X random images where cancer = 1, and X where cancer = 0\n",
     "## First part with .loc is a \"where-statement\", and sample(100) takes 100 items at random from the random list\n",
-    "size_X = 250\n",
+    "size_X = 500\n",
     "df_sample_cancer = df_random.loc[(df_random[\"cancer\"] == 1)].sample(size_X)\n",
     "print(df_sample_cancer)\n",
     "\n",
@@ -414,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "abc5f255-f9f8-49d3-947f-2963bf7f5b87",
    "metadata": {},
    "outputs": [
@@ -445,28 +482,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21557</th>\n",
-       "      <td>ISIC_6541615</td>\n",
+       "      <th>20904</th>\n",
+       "      <td>ISIC_6348638</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>758</th>\n",
-       "      <td>ISIC_0333091</td>\n",
+       "      <th>774</th>\n",
+       "      <td>ISIC_0337631</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11644</th>\n",
-       "      <td>ISIC_3590167</td>\n",
+       "      <th>28175</th>\n",
+       "      <td>ISIC_8527092</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21916</th>\n",
-       "      <td>ISIC_6634951</td>\n",
+       "      <th>33050</th>\n",
+       "      <td>ISIC_9978107</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20612</th>\n",
-       "      <td>ISIC_6269166</td>\n",
+       "      <th>28028</th>\n",
+       "      <td>ISIC_8483382</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -475,53 +512,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8582</th>\n",
-       "      <td>ISIC_2676009</td>\n",
+       "      <th>18533</th>\n",
+       "      <td>ISIC_5630228</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7695</th>\n",
-       "      <td>ISIC_2400548</td>\n",
+       "      <th>4451</th>\n",
+       "      <td>ISIC_1441260</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7259</th>\n",
-       "      <td>ISIC_2273490</td>\n",
+       "      <th>21714</th>\n",
+       "      <td>ISIC_6577841</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12739</th>\n",
-       "      <td>ISIC_3923443</td>\n",
+       "      <th>3283</th>\n",
+       "      <td>ISIC_1091280</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11839</th>\n",
-       "      <td>ISIC_3645705</td>\n",
+       "      <th>5635</th>\n",
+       "      <td>ISIC_1787026</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>500 rows × 2 columns</p>\n",
+       "<p>1000 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "           image_id  cancer\n",
-       "21557  ISIC_6541615       1\n",
-       "758    ISIC_0333091       1\n",
-       "11644  ISIC_3590167       1\n",
-       "21916  ISIC_6634951       1\n",
-       "20612  ISIC_6269166       1\n",
+       "20904  ISIC_6348638       1\n",
+       "774    ISIC_0337631       1\n",
+       "28175  ISIC_8527092       1\n",
+       "33050  ISIC_9978107       1\n",
+       "28028  ISIC_8483382       1\n",
        "...             ...     ...\n",
-       "8582   ISIC_2676009       0\n",
-       "7695   ISIC_2400548       0\n",
-       "7259   ISIC_2273490       0\n",
-       "12739  ISIC_3923443       0\n",
-       "11839  ISIC_3645705       0\n",
+       "18533  ISIC_5630228       0\n",
+       "4451   ISIC_1441260       0\n",
+       "21714  ISIC_6577841       0\n",
+       "3283   ISIC_1091280       0\n",
+       "5635   ISIC_1787026       0\n",
        "\n",
-       "[500 rows x 2 columns]"
+       "[1000 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,19 +571,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b0cfdb69-0b88-4bed-ba99-a89a4654e85e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "image_id    500\n",
-       "cancer        2\n",
+       "image_id    1000\n",
+       "cancer         2\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ec14b3ea-d738-4305-912c-17872ff1c7e7",
    "metadata": {},
    "outputs": [],
