New oracle groundtruth with precision scores

--- a/Extra/Data/collect_images.ipynb
+++ b/Extra/Data/collect_images.ipynb
@@ -1211,7 +1211,7 @@
     "        \n",
     "        # Load the DICOM file\n",
     "        ds = pydicom.dcmread(file_path, force=True)\n",
-    "        #print(ds)\n",
+    "        print(ds)\n",
     "        \n",
     "        # Convert the YUV colors to RGB (human readable)\n",
     "        ds_rgb = YUV2RGB(ds.pixel_array)\n",
