--- a/Extra/Data/create_oracle_labels.ipynb
+++ b/Extra/Data/create_oracle_labels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "51ce8830-5f71-474d-9338-654d8db0ab3e",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "83204a7f-f977-4d7c-a184-6ad97466be60",
    "metadata": {},
    "outputs": [
@@ -24,64 +24,104 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        anchor_id  anchor_label         item2         item3 answer\n",
-      "0    ISIC_0000484           1.0  ISIC_7228524  ISIC_9556334      B\n",
-      "1    ISIC_0010227           0.0  ISIC_6355353  ISIC_0953317      B\n",
-      "2    ISIC_0013845           1.0  ISIC_2609984  ISIC_6695831      A\n",
-      "3    ISIC_0000081           0.0  ISIC_3065032  ISIC_7748311      B\n",
-      "4    ISIC_0009898           1.0  ISIC_4710645  ISIC_3628451      B\n",
-      "..            ...           ...           ...           ...    ...\n",
-      "496  ISIC_0009993           1.0  ISIC_7186503  ISIC_4653503      B\n",
-      "497  ISIC_0013578           1.0  ISIC_1648826  ISIC_7800750      B\n",
-      "498  ISIC_0012735           0.0  ISIC_5829938  ISIC_5021861      B\n",
-      "499  ISIC_0000463           1.0  ISIC_6671773  ISIC_6255113      A\n",
-      "500           NaN           NaN           NaN           NaN    NaN\n",
+      "        anchor_id  anchor_label         item2         item3 answer  \\\n",
+      "0    ISIC_0000484             1  ISIC_7228524  ISIC_9556334      B   \n",
+      "1    ISIC_0010227             0  ISIC_6355353  ISIC_0953317      B   \n",
+      "2    ISIC_0013845             1  ISIC_2609984  ISIC_6695831      A   \n",
+      "3    ISIC_0000081             0  ISIC_3065032  ISIC_7748311      B   \n",
+      "4    ISIC_0009898             1  ISIC_4710645  ISIC_3628451      B   \n",
+      "..            ...           ...           ...           ...    ...   \n",
+      "495  ISIC_0014603             0  ISIC_5216586  ISIC_8667793      B   \n",
+      "496  ISIC_0009993             1  ISIC_7186503  ISIC_4653503      B   \n",
+      "497  ISIC_0013578             1  ISIC_1648826  ISIC_7800750      B   \n",
+      "498  ISIC_0012735             0  ISIC_5829938  ISIC_5021861      B   \n",
+      "499  ISIC_0000463             1  ISIC_6671773  ISIC_6255113      A   \n",
       "\n",
-      "[501 rows x 5 columns]\n",
+      "          certainty  \n",
+      "0      very certain  \n",
+      "1    very uncertain  \n",
+      "2      very certain  \n",
+      "3    very uncertain  \n",
+      "4    very uncertain  \n",
+      "..              ...  \n",
+      "495    very certain  \n",
+      "496    very certain  \n",
+      "497    very certain  \n",
+      "498  very uncertain  \n",
+      "499    very certain  \n",
+      "\n",
+      "[500 rows x 6 columns]\n",
+      "        anchor_id  anchor_label         item2         item3 answer  \\\n",
+      "0    ISIC_0000484             1  ISIC_7228524  ISIC_9556334      B   \n",
+      "2    ISIC_0013845             1  ISIC_2609984  ISIC_6695831      A   \n",
+      "5    ISIC_0000307             1  ISIC_2783331  ISIC_3144222      B   \n",
+      "6    ISIC_0011333             0  ISIC_3834379  ISIC_0718586      A   \n",
+      "7    ISIC_0000174             1  ISIC_4170698  ISIC_1725961      A   \n",
+      "..            ...           ...           ...           ...    ...   \n",
+      "494  ISIC_0014132             1  ISIC_4398011  ISIC_4026806      A   \n",
+      "495  ISIC_0014603             0  ISIC_5216586  ISIC_8667793      B   \n",
+      "496  ISIC_0009993             1  ISIC_7186503  ISIC_4653503      B   \n",
+      "497  ISIC_0013578             1  ISIC_1648826  ISIC_7800750      B   \n",
+      "499  ISIC_0000463             1  ISIC_6671773  ISIC_6255113      A   \n",
+      "\n",
+      "        certainty  \n",
+      "0    very certain  \n",
+      "2    very certain  \n",
+      "5    very certain  \n",
+      "6    very certain  \n",
+      "7    very certain  \n",
+      "..            ...  \n",
+      "494  very certain  \n",
+      "495  very certain  \n",
+      "496  very certain  \n",
+      "497  very certain  \n",
+      "499  very certain  \n",
+      "\n",
+      "[384 rows x 6 columns]\n",
       "         image_id  melanoma\n",
-      "306  ISIC_0149568       1.0\n",
-      "469  ISIC_0188432       1.0\n",
-      "367  ISIC_0234096       1.0\n",
-      "93   ISIC_0236510       0.0\n",
-      "477  ISIC_0272509       0.0\n",
+      "306  ISIC_0149568         1\n",
+      "469  ISIC_0188432         1\n",
+      "93   ISIC_0236510         0\n",
+      "340  ISIC_0273594         0\n",
+      "56   ISIC_0274382         1\n",
       "..            ...       ...\n",
-      "146  ISIC_9889475       1.0\n",
-      "242  ISIC_9910791       1.0\n",
-      "28   ISIC_9940466       0.0\n",
-      "61   ISIC_9955163       1.0\n",
-      "500           NaN       NaN\n",
+      "342  ISIC_9818733         0\n",
+      "275  ISIC_9821002         1\n",
+      "242  ISIC_9910791         1\n",
+      "28   ISIC_9940466         0\n",
+      "61   ISIC_9955163         1\n",
       "\n",
-      "[501 rows x 2 columns]\n",
+      "[384 rows x 2 columns]\n",
       "              melanoma\n",
       "image_id              \n",
       "ISIC_0149568       1.0\n",
       "ISIC_0188432       1.0\n",
-      "ISIC_0234096       1.0\n",
       "ISIC_0236510       0.0\n",
-      "ISIC_0272509       0.0\n",
+      "ISIC_0273594       0.0\n",
+      "ISIC_0274382       1.0\n",
       "...                ...\n",
-      "ISIC_9883879       1.0\n",
-      "ISIC_9889475       1.0\n",
+      "ISIC_9818733       0.0\n",
+      "ISIC_9821002       1.0\n",
       "ISIC_9910791       1.0\n",
       "ISIC_9940466       0.0\n",
       "ISIC_9955163       1.0\n",
       "\n",
-      "[500 rows x 1 columns]\n",
+      "[384 rows x 1 columns]\n",
       "              melanoma\n",
       "image_id              \n",
       "ISIC_0149568       1.0\n",
       "ISIC_0188432       1.0\n",
-      "ISIC_0234096       1.0\n",
       "ISIC_0236510       0.0\n",
-      "ISIC_0272509       0.0\n",
+      "ISIC_0273594       0.0\n",
+      "ISIC_0274382       1.0\n",
       "...                ...\n",
-      "ISIC_9883879       1.0\n",
-      "ISIC_9889475       1.0\n",
+      "ISIC_9818733       0.0\n",
+      "ISIC_9821002       1.0\n",
       "ISIC_9910791       1.0\n",
       "ISIC_9940466       0.0\n",
       "ISIC_9955163       1.0\n",
       "\n",
-      "[500 rows x 1 columns]\n"
+      "[384 rows x 1 columns]\n"
      ]
     }
    ],
@@ -107,17 +147,27 @@
     "       'AssignmentId', 'WorkerId', 'AssignmentStatus', 'AcceptTime',\n",
     "       'SubmitTime', 'AutoApprovalTime', 'ApprovalTime', 'RejectionTime',\n",
     "       'RequesterFeedback', 'WorkTimeInSeconds', 'LifetimeApprovalRate',\n",
-    "       'Last30DaysApprovalRate', 'Last7DaysApprovalRate', 'Input.id',\n",
-    "       'Input.item1_url', 'Input.item2_label', 'Input.item2_url', 'Input.item3_label', 'Input.item3_url','Approve', 'Reject'])\n",
+    "       'Last30DaysApprovalRate', 'Last7DaysApprovalRate', 'Input.id1',\n",
+    "        'Input.image1_url', 'Input.image2_label', 'Input.image2_url','Input.image3_label', 'Input.image3_url', 'Approve', 'Reject'])\n",
     "\n",
     "# Rename columns\n",
-    "df_prep0 = df_prep0.rename(columns={\"Input.item1_title\":\"anchor_id\", \"Input.item1_label\" : \"anchor_label\", \"Input.item2_title\":\"item2\", \"Input.item3_title\":\"item3\", \"Answer.equal.label\":\"answer\"  })\n",
+    "df_prep0 = df_prep0.rename(columns={\"Input.image1_title\":\"anchor_id\", \"Input.image1_label\" : \"anchor_label\",\n",
+    "                                    \"Input.image2_title\":\"item2\", \"Input.image3_title\":\"item3\",\n",
+    "                                    \"Answer.equal.label\":\"certainty\", \"Answer.equal\":\"answer\"  })\n",
     "print(df_prep0)\n",
     "\n",
     "## Create the ground truth file\n",
     "# Step 1: give image_id to picture that has been answered\n",
     "\n",
-    "df_prep1 = df_prep0\n",
+    "# Step0b : Drop all \"very uncertains\"\n",
+    "# # Get names of indexes for which column Age has value 30\n",
+    "indexNames = df_prep0[df_prep0['certainty'] == \"very uncertain\"].index\n",
+    "\n",
+    "# Delete these row indexes from dataFrame\n",
+    "df_prep0b = df_prep0.drop(indexNames)\n",
+    "print(df_prep0b)\n",
+    "\n",
+    "df_prep1 = df_prep0b\n",
     "## Find image ID based on the answer is A or N\n",
     "df_prep1[[\"image_id\"]] = df_prep1[[\"item2\"]].where(df_prep1[[\"answer\"]].values==\"A\")\n",
     "## Because it is binary, we now all NaN is B (Image 3)\n",
@@ -139,12 +189,14 @@
     "# Step 4: Round to nearest label {0,1}\n",
     "df = df_prep3\n",
     "df = df.round({'melanoma': 0})\n",
-    "print(df)\n"
+    "print(df)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "032a9156-3569-4db0-9973-930c7a06c52c",
    "metadata": {},
    "outputs": [],
